--- a/src/container/page/home.css
+++ b/src/container/page/home.css
@@ -257,6 +257,19 @@ table {
         margin: auto;
     }
 
+    .footer {
+        width: 100%;
+        height: 40px;
+        background-color: #EF5350;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        text-align: center;
+        color: white;
+        line-height: 40px;
+        font-family: calibri;
+        margin: auto;
+    }
+
 
 
 /*Responsif*/
@@ -406,6 +419,12 @@ table {
         .ant-btn {
             width: 70px;
             height: 40px;
+        }
+
+        .footer {
+            margin-left: 230px;
+            line-height: 40px;
+            height: 50px
         }
 }
 
