--- a/src/container/page/home.css
+++ b/src/container/page/home.css
@@ -79,6 +79,7 @@ table {
         float: right;
         margin-top: 12px;
         margin-right: 10px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
     }
 
     .menuBar li {
@@ -470,6 +471,7 @@ table {
     }
     .header {
         height: 100px;
+
     }
 
     .headerImg {
@@ -481,6 +483,7 @@ table {
     .menuBar li {
         font-size: 35px !important;
         margin-top: 20px;
+        
     }
 
     .menuBar .search-bar {
