--- a/src/container/page/home.css
+++ b/src/container/page/home.css
@@ -271,6 +271,10 @@ table {
         margin: auto;
     }
 
+    .ant-modal-content {
+        width: 600px !important; 
+    }
+
 
 
 /*Responsif*/
